# churnwall

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
churnwall/: __init__.py  api.py  app.py  cli.py  db.py  models.py  rc_client.py  recommender.py  scorer.py  settings.py  state_machine.py  sync.py  webhook.py
churnwall/integrations/: __init__.py  dispatcher.py  resend.py  slack.py
tests/: test_api.py  test_cli.py  test_health.py  test_integrations.py  test_rc_client.py  test_recommender.py  test_scorer.py  test_state_machine.py  test_sync.py  test_webhook.py
