[project]
name = "churnwall"
version = "0.1.0"
description = "Programmatic subscriber retention engine for RevenueCat-based apps"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
churnwall = "churnwall.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["churnwall"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
